elements/pf-chip/pf-chip.css
:host {
	--pf-c-chip--PaddingTop: var(--pf-global--spacer--xs, 0.25rem);
	--pf-c-chip--PaddingRight: var(--pf-global--spacer--sm, 0.5rem);
	--pf-c-chip--PaddingBottom: var(--pf-global--spacer--xs, 0.25rem);
	--pf-c-chip--PaddingLeft: var(--pf-global--spacer--sm, 0.5rem);
	--pf-c-chip--BackgroundColor: var(--pf-global--Color--light-100, #fff);
	--pf-c-chip--BorderRadius: var(--pf-global--BorderRadius--sm, 3px);
	--pf-c-chip--before--BorderColor: var(--pf-global--BorderColor--300, #f0f0f0);
	--pf-c-chip--before--BorderWidth: var(--pf-global--BorderWidth--sm, 1px);
	--pf-c-chip--before--BorderRadius: var(--pf-c-chip--BorderRadius);
	--pf-c-chip--m-overflow__text--Color: var(--pf-global--primary-color--100, #06c);
	--pf-c-chip--m-draggable--BackgroundColor: var(--pf-global--BackgroundColor--200, #f0f0f0);
	--pf-c-chip--m-draggable--BoxShadow: var(--pf-global--BoxShadow--sm, 0 0.0625rem 0.125rem 0 rgba(3, 3, 3, 0.12), 0 0 0.125rem 0 rgba(3, 3, 3, 0.06));
	--pf-c-chip--m-draggable__icon--FontSize: var(--pf-global--icon--FontSize--sm, 0.625rem);
	--pf-c-chip__text--FontSize: var(--pf-global--FontSize--xs, 0.75rem);
	--pf-c-chip__text--Color: var(--pf-global--Color--100, #151515);
	--pf-c-chip__c-button--PaddingTop: var(--pf-global--spacer--xs, 0.25rem);
	--pf-c-chip__c-button--PaddingRight: var(--pf-global--spacer--sm, 0.5rem);
	--pf-c-chip__c-button--PaddingBottom: var(--pf-global--spacer--xs, 0.25rem);
	--pf-c-chip__c-button--PaddingLeft: var(--pf-global--spacer--sm, 0.5rem);
	--pf-c-chip__c-button--MarginTop: calc(var(--pf-c-chip--PaddingTop) * -1);
	--pf-c-chip__c-button--MarginRight: calc(var(--pf-c-chip--PaddingRight) * -1);
	--pf-c-chip__c-button--MarginBottom: calc(var(--pf-c-chip--PaddingBottom) * -1);
	--pf-c-chip__c-button--MarginLeft: var(--pf-global--spacer--sm, 0.5rem);
	--pf-c-chip__c-button--FontSize: var(--pf-global--FontSize--xs, 0.75rem);
	--pf-c-chip__c-badge--MarginLeft: var(--pf-global--spacer--xs, 0.25rem);
	--pf-c-chip__icon--MarginLeft: var(--pf-global--spacer--sm, 0.5rem);
	display: contents;
	min-width: 0;
	padding: 0;
	list-style: none;
}

*[hidden],
:host([hidden]) {
  display: none !important;
}

#outer {
	display: inline-flex;
	align-items: center;
  justify-content: space-between;
	background-color: var(--pf-c-chip--BackgroundColor);
	border-radius: var(--pf-c-chip--BorderRadius);
  border: var(--pf-c-chip--before--BorderWidth) solid var(--pf-c-chip--before--BorderColor);
  padding: 
	  var(--pf-c-chip--PaddingTop)
	  var(--pf-c-chip--PaddingRight)
	  var(--pf-c-chip--PaddingBottom)
	  var(--pf-c-chip--PaddingLeft);
}

.chip-content {
  display: inline-flex;
  align-items: center;
}

.chip-content {
	color: var(--pf-c-chip__text--Color);
  font-family: var(--pf-global--FontFamily--sans-serif, "RedHatTextUpdated", "Overpass", overpass, helvetica, arial, sans-serif);
  font-size: var(--pf-c-chip__text--FontSize);
  font-weight: var(--pf-global--FontWeight--normal, 400);
  line-height: 1.6;
  overflow-x: hidden;
  overflow-y: hidden;
  text-overflow: ellipsis;
  display: inline-flex;
  text-wrap: nowrap;
  white-space: nowrap;
  flex: 0 0 auto;
}

:host([readonly]) .chip-content {
  color: var(--pf-global--Color--200, #6a6e73);
}

#close-button {
  background-color: transparent;
  border: none;
  color: var(--pf-theme--color--ui-base, #6a6e73);
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 44px;
  min-width: 44px;
  margin: var(--pf-c-chip__c-button--MarginTop)
    var(--pf-c-chip__c-button--MarginRight)
    var(--pf-c-chip__c-button--MarginBottom)
    var(--pf-c-chip__c-button--MarginLeft);
  padding: var(--pf-c-chip__c-button--PaddingTop)
    var(--pf-c-chip__c-button--PaddingRight)
    var(--pf-c-chip__c-button--PaddingBottom)
    var(--pf-c-chip__c-button--PaddingLeft);
}

svg {
  vertical-align: -0.125em;
  width: var(--pf-c-chip__text--FontSize, 12px);
  height: var(--pf-c-chip__text--FontSize, 12px);
}

::slotted(pf-badge) {
  font-size: var(--pf-global--FontSize--xs, 12px);
  margin: 0 0 0 var(--pf-global--spacer--xs, 0.25rem) !important;
  min-width: unset;
}

